feat: update gitignore

--- a/.npmignore
+++ b/.npmignore
@@ -2,7 +2,9 @@
 .prettierignore
 .prettierrc
 
+CHANGELOG.md
 commitlint.config.js
+cspell.json
 eslint.config.mjs
 jest.config.ts
 tsconfig.json
@@ -10,6 +12,7 @@ webpack.config.mjs
 
 .github/
 .husky/
+.jest/
 
 coverage/
 src/
