--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,20 @@
-{"compilerOptions":{"allowJs":true,"allowSyntheticDefaultImports":true,"baseUrl":".","declaration":true,"esModuleInterop":true,"module":"es6","moduleResolution":"node","outDir":"./dist","target":"es2022","resolveJsonModule":true,"skipLibCheck":true,"sourceMap":true,"paths":{"@app-leith-config-api-ports":["./src/*"],"@test-leith-config-api-ports":["./test/*"]}},"exclude":[".git",".github",".husky",".jest","dist"],"files":["src/index.ts"],"include":["./src/**/*.ts"]}
+{
+  "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "declaration": true,
+    "esModuleInterop": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "target": "es5",
+    "paths": { "@app-lcap/*": ["./src/*"] }
+  },
+  "exclude": [".git", ".github", ".jest", "coverage", "node_modules", "dist"],
+  "files": ["src/index.ts"],
+  "include": ["./src/**/*.ts"]
+}
