fix: attempt to further simply the export

--- a/jest.config.integration.json
+++ b/jest.config.integration.json
@@ -1,6 +1,7 @@
 {
   "moduleNameMapper": {
-    "@app-lcap/(.*)": "<rootDir>/src/$1"
+    "@app-lcap": "<rootDir>/src/index.ts",
+		"@app-lcap/(.*)": "<rootDir>/src/$1"
   },
   "preset": "ts-jest",
   "testEnvironment": "node",
