--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "target": "es5",
-    "paths": { "@app-lcap/*": ["./src/*"] }
+    "paths": {
+			"@app-lcap": ["./src/index.ts"],
+			"@app-lcap/*": ["./src/*"]
+		}
   },
   "exclude": [".git", ".github", ".jest", "coverage", "node_modules", "dist"],
   "files": ["src/index.ts"],
